java-playground/app/src/main/java/com/example/app/dependency/good/FileServiceImpl.java
package com.example.app.dependency.good;

public class FileServiceImpl implements IFileService {
    @Override
    public void storeFile(String path) {
        System.out.println("[Good] FileServiceImpl: storing " + path);
    }
}
